<resources>
    <string name="app_name">RosApp</string>
    <string name="business_btn">紫外消杀灯</string>
    <string name="switch_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user">user</string>
    <string name="admin">admin</string>
    <string name="task_bt_default_run_state">空跑</string>
    <string name="task_detail_path">step 1:  %1$s</string>
    <string name="mode_both">环境消杀与空气净化</string>
    <string name="mode_disinfection">仅环境消杀</string>
    <string name="mode_air">仅空气进化</string>
    <string name="mode_none">空跑</string>
    <string name="demo_map_name">地图名称：示例</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_robot">登陆到机器人</string>
    <string name="robot_id">Robot IP: %1$s </string>
    <string name="login_button">登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="set">设置</string>
    <string name="path_and_point_manager">路径和点管理</string>
    <string name="map_manager">地图管理</string>
    <string name="map_and_path_manager">地图与路径管理</string>
    <string name="system_set">系统设置</string>
    <string name="password_outIndex">密码超过范围了</string>
    <string name="password_error">密码错误,请重试!</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="loading">正在加载中</string>
    <string name="please_check_intent">请检查机器人底盘网络，或者进入离线模式？</string>
    <string name="retrying">重试中</string>
    <string name="retry">重试</string>
    <string name="enter_offline_mode">进入离线模式</string>
    <string name="home">主页</string>
    <string name="healthy_manager">健康管理</string>
    <string name="task_report">任务报告</string>
    <string name="scheduled_task">定时任务</string>
    <string name="map_and_path">地图与路径</string>
    <string name="internet_manager">网络管理</string>
    <string name="login_out">注销登录</string>
    <string name="insert">插入</string>
    <string name="put_out">拔出</string>
    <string name="loop_number">循环次数:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="infinity">∞</string>
    <string name="start_task">开始任务</string>
    <string name="health">健康</string>
    <string name="fan_speed">风扇转速</string>
    <string name="watch_detail">查看详情</string>
    <string name="start_time">开始时间</string>
    <string name="repeat">重复</string>
    <string name="add_task">新建任务</string>
    <string name="end_time">结束时间</string>
    <string name="end_time_tips">结束时间应该大于开始时间</string>
    <string name="add_time_task">新建定时任务</string>
    <string name="delete_task">删除任务</string>
    <string name="model">模式</string>
    <string name="loop_num">循环次数</string>
    <string name="date">日期</string>
    <string name="times">时间点</string>
    <string name="task_id">源任务ID</string>
    <string name="task_name">源任务名称</string>
    <string name="hand">手动</string>
    <string name="auto">自动</string>
    <string name="network_failed_exit">网络连接失败，请退出重新登录</string>
    <string name="normal">正常</string>
    <string name="please_input_map_name">请输入地图名</string>
    <string name="service_close_please_exit">离线模式或服务未开启，请退回登录界面重试！</string>
    <string name="save_map">保存地图</string>
    <string name="cancel_map">取消建图</string>
    <string name="save_success">保存成功</string>
    <string name="noNormal">异常</string>
    <string name="collecion">+扫描新地图</string>
    <string name="start_ps">开始修图</string>
    <string name="start_v_wall">开始虚拟墙</string>
    <string name="save_v_wall">保存虚拟墙</string>
    <string name="add_v_point">添加虚拟点</string>
    <string name="exit_v_wall">退出虚拟墙</string>
    <string name="back_control">撤销操作</string>
    <string name="exiy_ps">退出修图</string>
    <string name="save_ps">保存修图</string>
    <string name="subscribe_fail">订阅失败，请检查</string>
    <string name="subscribe_fail_state_request">StateMachineRequest 订阅失败，请检查</string>
    <string name="subscribe_fail_map_control">MapControl 订阅失败，请检查</string>
    <string name="subscribe_fail_manual_path">ManualPathParameter 订阅失败，请检查</string>
    <string name="subscribe_fail_coverage_points">CoveragePoints 订阅失败，请检查</string>
    <string name="subscribe_fail_clamp_control">ClampControl 订阅失败，请检查</string>
    <string name="subscribe_fail_clamp_hardware_control">ClampHardwareControl 订阅失败，请检查</string>
    <string name="subscribe_fail_enter_manual">EnterManual 订阅失败，请检查</string>
    <string name="please_preview">请先预览确认再保存</string>
    <string name="network_set">网络设置</string>
    <string name="test">测试</string>
    <string name="ip_set_success">"IP设置成功 "</string>
    <string name="please_input_ip">请输入机器人IP</string>
    <string name="set_robot_ip">设置机器人IP</string>
    <string name="input_format">输入格式有误</string>
    <string name="clip_manage">抱夹配置</string>
    <string name="clip_hand_mode">抱夹手动模式</string>
    <string name="map_set">地图设置</string>
    <string name="not_select_control">未选择操作类型</string>
    <string name="retargeting">重定位</string>
    <string name="no_permission">该账户无权限</string>
    <string name="ros_connect_fail">ROS连接断开</string>
    <string name="clip">抱夹功能</string>
    <string name="user_manager">用户管理</string>
    <string name="please_create_new_task">暂无任务，请新建定时任务</string>
    <string name="no_task">无任务,请退出新建任务</string>
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>
    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">错误日志</string>
</resources>