<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/task_control_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="242dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/nav_view_background"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_ll"
            style="@style/WhiteTextTheme.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_text_margin_left"
            android:layout_marginTop="10dp"
            android:drawablePadding="40dp"
            android:paddingVertical="15dp"
            android:text="@string/home"
            app:drawableStartCompat="@mipmap/home" />

        <TextView
            android:id="@+id/time_task_ll"
            style="@style/WhiteTextTheme.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_text_margin_left"
            android:layout_marginTop="10dp"
            android:drawablePadding="40dp"
            android:paddingVertical="15dp"
            android:text="@string/map_manager"
            app:drawableStartCompat="@mipmap/time_task" />

        <TextView
            android:id="@+id/system_set_ll"
            style="@style/WhiteTextTheme.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_text_margin_left"
            android:layout_marginTop="10dp"
            android:drawablePadding="40dp"
            android:paddingVertical="15dp"
            android:text="@string/system_set"
            app:drawableStartCompat="@mipmap/system_set" />

        <TextView
            android:id="@+id/tvUserManager"
            style="@style/WhiteTextTheme.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_text_margin_left"
            android:layout_marginTop="10dp"
            android:drawablePadding="40dp"
            android:paddingVertical="15dp"
            android:text="@string/user_manager"
            app:drawableStartCompat="@mipmap/user_manager" />


        <TextView
            android:id="@+id/drawer_close_ll"
            style="@style/WhiteTextTheme.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawer_text_margin_left"
            android:layout_marginTop="10dp"
            android:drawablePadding="40dp"
            android:paddingVertical="15dp"
            android:text="@string/login_out"
            app:drawableStartCompat="@mipmap/exit_icon" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>