<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_map_control"
            android:layout_width="960dp"
            android:layout_height="480dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@mipmap/mapcontrol_background" />

        <TextView
            android:id="@+id/manager_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/map_manager"
            style="@style/WhiteTextTheme.20"
            app:drawableTopCompat="@mipmap/mapcontrol_map_manager"
            app:layout_constraintBottom_toBottomOf="@+id/manager_path_info"
            app:layout_constraintEnd_toStartOf="@+id/manager_path_info"
            app:layout_constraintStart_toStartOf="@+id/image_map_control"
            app:layout_constraintTop_toTopOf="@+id/manager_path_info" />

        <TextView
            android:id="@+id/manager_path_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/path_and_point_manager"
            style="@style/WhiteTextTheme.20"
            app:drawableTopCompat="@mipmap/mapcontrol_lujinhedianguanli4_21"
            app:layout_constraintBottom_toBottomOf="@+id/image_map_control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/manager_map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_map_control" />

        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/set"
            style="@style/WhiteTextTheme.20"
            app:drawableTopCompat="@mipmap/mapcontrol_set"
            app:layout_constraintBottom_toBottomOf="@+id/manager_path_info"
            app:layout_constraintEnd_toEndOf="@+id/image_map_control"
            app:layout_constraintStart_toEndOf="@+id/manager_path_info"
            app:layout_constraintTop_toTopOf="@+id/manager_path_info" />

        <TextView
            android:id="@+id/return_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="100dp"
            android:text="@string/map_and_path_manager"
            style="@style/WhiteTextTheme.28"
            app:drawableStartCompat="@mipmap/choose_task_point_left"
            app:layout_constraintBottom_toTopOf="@+id/image_map_control"
            app:layout_constraintStart_toStartOf="@+id/image_map_control"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>