<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".ui.control.ChooseTaskFragment">


    <TextView
        android:id="@+id/choose_task_map_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:text="Daimon"
        style="@style/WhiteTextTheme.28"
        app:layout_constraintBottom_toBottomOf="@+id/map_image"
        app:layout_constraintEnd_toStartOf="@+id/map_image"
        app:layout_constraintTop_toTopOf="@+id/map_image" />

    <Spinner
        android:id="@+id/choose_task_map_spinner"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:dropDownWidth="129dp"
        android:dropDownVerticalOffset="13dp"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/map_image"
        app:layout_constraintStart_toStartOf="@+id/choose_task_map_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/parent" />

    <ImageView
        android:id="@+id/map_image"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent"
        app:srcCompat="@mipmap/dingwei4_22" />
    <com.hjq.shape.view.ShapeButton
        android:id="@+id/btnRetargeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/WhiteTextTheme.26"
        android:text="@string/retargeting"
        app:layout_constraintEnd_toStartOf="@id/choose_task_map_spinner"
        app:layout_constraintTop_toTopOf="@id/choose_task_map_spinner"
        android:layout_marginEnd="40dp"
        app:shape_radius="20dp"
        app:shape_solidColor="@color/blue_1f4e96"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        app:shape_solidPressedColor="@color/red"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_image">

        <ImageView
            android:id="@+id/health_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_task_icon_size_height"
            android:layout_marginTop="30dp"
            android:scaleType="center"
            android:src="@mipmap/choosetask_jiankang4_21" />

        <ImageView
            android:id="@+id/task_report_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_task_icon_size_height"
            android:layout_marginTop="@dimen/choose_task_icon_margin_top"
            android:scaleType="center"
            android:src="@mipmap/choosetask_xuanze4_21" />

        <ImageView
            android:id="@+id/manual_control_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_task_icon_size_height"
            android:layout_marginTop="@dimen/choose_task_icon_margin_top"
            android:scaleType="center"
            android:src="@mipmap/choosetask_shoudong4_21" />

        <ImageView
            android:id="@+id/open_drawer_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/choose_task_icon_size_height"
            android:layout_marginTop="@dimen/choose_task_icon_margin_top"
            android:layout_marginBottom="40dp"
            android:scaleType="center"
            android:src="@mipmap/choosetask_shujuguanli4_21" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="@color/ros_bt_line"
        app:layout_constraintBottom_toBottomOf="@+id/nav_view"
        app:layout_constraintStart_toEndOf="@+id/nav_view"
        app:layout_constraintTop_toTopOf="@+id/nav_view" />

    <HorizontalScrollView
        android:id="@+id/tasks_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        app:layout_constraintStart_toEndOf="@+id/nav_view"
        app:layout_constraintTop_toTopOf="@+id/nav_view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.shciri.rosapp.ui.myview.TaskBtView
                android:id="@+id/task_bt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/task_bt_margin"
                android:focusableInTouchMode="true" />

            <com.shciri.rosapp.ui.myview.TaskBtView
                android:id="@+id/task_bt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/task_bt_margin"
                android:focusableInTouchMode="true" />

            <com.shciri.rosapp.ui.myview.TaskBtView
                android:id="@+id/task_bt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/task_bt_margin"
                android:focusableInTouchMode="true" />

            <LinearLayout
                android:id="@+id/more_task_ll"
                android:layout_width="238dp"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/task_bt_margin"
                android:layout_marginEnd="@dimen/task_bt_margin"
                android:layout_marginBottom="12dp"
                android:background="@mipmap/choose_task_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/choosetask_gengduo4_21" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="更多"
                    style="@style/WhiteTextTheme.20" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/loop_number"
        style="@style/WhiteTextTheme.30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nav_view"
        app:layout_constraintTop_toBottomOf="@+id/tasks_view" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        android:orientation="horizontal">

        <com.hjq.shape.view.ShapeRadioButton
            android:id="@+id/circulateTv1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/one"
            style="@style/WhiteTextTheme.30"
            android:button="@null"
            android:gravity="center"
            app:shape_solidCheckedColor="@color/red"
            app:shape_radius="4dp"/>

        <com.hjq.shape.view.ShapeRadioButton
            android:id="@+id/circulateTv2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/two"
            style="@style/WhiteTextTheme.30"
            android:gravity="center"
            android:button="@null"
            app:shape_solidCheckedColor="@color/red"
            app:shape_radius="4dp"
            />

        <com.hjq.shape.view.ShapeRadioButton
            android:id="@+id/circulateTv3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/three"
            style="@style/WhiteTextTheme.30"
            android:gravity="center"
            android:button="@null"
            app:shape_solidCheckedColor="@color/red"
            app:shape_radius="4dp"
            />

        <com.hjq.shape.view.ShapeRadioButton
            android:id="@+id/circulateTv4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/infinity"
            android:button="@null"
            style="@style/WhiteTextTheme.30"
            android:gravity="center"
            app:shape_solidCheckedColor="@color/red"
            app:shape_radius="4dp" />
    </RadioGroup>


    <TextView
        android:id="@+id/start_task_bt"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background_selector"
        android:gravity="center"
        android:text="@string/start_task"
        style="@style/WhiteTextTheme.24"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.545" />
</androidx.constraintlayout.widget.ConstraintLayout>
